# syssnap

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  LICENSE  README.md
cmake/: CMakeConfig.cmake  CMakeInstall.cmake  CMakeLibs.cmake  CMakeLink.cmake  CMakePreConf.cmake  CMakeTargets.cmake  dev-mode.cmake  install-config.cmake  install-rules.cmake  syssnapConfig.cmake.in  variables.cmake
demo/: CMakeLists.txt  main.cpp
example/: CMakeLists.txt  example.cpp
include/syssnap/: syssnap.hpp  topology.hpp  types.hpp
include/system_snapshot/: system_snapshot.hpp  topology.hpp
test/: CMakeLists.txt
test/source/: prox_exists.cpp  syssnap_exists.cpp
